--- a/frontend-client/public/index.html
+++ b/frontend-client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>GRIPlink</title>
+    <title>GRIPLINK</title>
   </head>
   <body>
     <div id="root"></div>
