--- a/frontend-client/public/index.html
+++ b/frontend-client/public/index.html
@@ -9,10 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <title>GRIPLINK</title>
   </head>
   <body>
-    <h1>Hello World!!!</h1>
     <div id="root"></div>
   </body>
 </html>
